# CyberSecTools

./: .replit  README.md  README_local.md  ai_chat.py  app.py  auth.py  billing.py  cve_database.py  cybersec_platform.db  dashboard.py  database.py  exploit_database.py  port_scanner.py  pyproject.toml  replit.md  report_generator.py  shodan_integration.py  utils.py  web_scanner.py
attached_assets/: Pasted-I-have-an-existing-app-whose-backend-logic-and-features-must-not-be-changed-I-want-you-to-replace-o-1759732471090_1759732471093.txt  Pasted-You-are-an-expert-full-stack-AI-coding-assistant-I-have-a-Streamlit-project-that-I-want-to-refact-1759219081352_1759219081352.txt
backend/: .env.example  cybersec_platform.db  main.py  requirements.txt
backend/models/: scan.py  user.py
backend/routers/: auth.py  billing.py  chat.py  cve.py  dashboard.py  exploits.py  reports.py  scanning.py  shodan.py
backend/services/: port_scanner_service.py  report_service.py  web_scanner_service.py
backend/utils/: database.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedIcon.tsx  GlowingCard.tsx  Layout.tsx  LiveBadge.tsx  LiveFeed.tsx  ProgressLoader.tsx  ToastSystem.tsx
frontend/src/pages/: AIChat.tsx  Billing.tsx  CVEDatabase.tsx  Dashboard.tsx  ExploitDatabase.tsx  Login.tsx  (+4 more)
pages/: 1_🤖_AI_Security_Chat.py  2_🔍_Network_Scanner.py  3_🌐_Web_Vulnerability_Scanner.py  4_🛡️_CVE_Database.py  5_🌍_Shodan_Intelligence.py  6_💥_Exploit_Database.py  7_📊_Reports.py  8_💳_Billing.py
(+3 files in other folders)
