[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai==1.7.2",
    "pandas>=2.3.2",
    "python-nmap>=0.7.1",
    "streamlit-folium>=0.25.2",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
    "urllib3==2.1.0",
    "stripe==7.11.0",
    "requests==2.31.0",
    "pyjwt==2.8.0",
    "plotly>=6.3.0",
    "folium>=0.20.0",
    "reportlab==4.0.8",
    "argon2-cffi==23.1.0",
    "argon2>=0.1.10",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
    "fastapi==0.109.0",
    "email-validator>=2.3.0",
]
